--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,22 +1,47 @@
 <h4>Formularios <small>Templates</small></h4>
 <hr>
-<form>
+<form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate>
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
       <div class="col-sm-10">
-         <input type="text" class="form-control form-control-sm" placeholder="Nombre">
+         <input type="text"
+               class="form-control form-control-sm"
+               placeholder="Nombre"
+               name="nombre"
+               [(ngModel)]="usuario.nombre"
+               minlength="2"
+               required
+               #nombre="ngModel">
+         <span class="text-secondary" *ngIf="nombre.errors?.required">Este campo es requerido</span>
+         <span class="text-danger"></span>
+         <div>
+         </div>
       </div>
    </div>
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Apellido</label>
       <div class="col-sm-10">
-         <input type="text" class="form-control form-control-sm" placeholder="Apellido">
+         <input type="text"
+               class="form-control form-control-sm"
+               placeholder="Apellido"
+               name="apellido"
+               [(ngModel)]="usuario.apellido"
+               minlength="2"
+               required>
       </div>
    </div>
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Correo</label>
       <div class="col-sm-10">
-         <input type="email" class="form-control form-control-sm" placeholder="Correo electronico">
+         <input type="email"
+               class="form-control form-control-sm"
+               placeholder="Correo electronico"
+               name="email"
+               [(ngModel)]="usuario.email"
+               required
+               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+         <br>
+         <button type="submit"  class="btn btn-outline-primary">Guardar</button>
       </div>
    </div>
 
