--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,10 +1,12 @@
 <h4>Formularios <small>Templates</small></h4>
 <hr>
 <form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate>
-   <div class="form-group row">
+   <div class="form-group row"
+      >
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
       <div class="col-sm-10">
-         <input type="text"
+         <input [ngClass]="{ 'is-invalid': (nombre.errors?.required || nombre.errors?.minlength) && nombre.touched }"
+               type="text"
                class="form-control form-control-sm"
                placeholder="Nombre"
                name="nombre"
@@ -13,18 +15,19 @@
                required
                #nombre="ngModel">
 
-         <div class="pl-1">
-            <small class="text-secondary" *ngIf="nombre.errors?.required">Este campo es requerido.</small>
-            <small class="text-danger"  *ngIf="nombre.errors?.minlength">
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="nombre.errors?.required">Este campo es requerido.</span>
+            <span *ngIf="nombre.errors?.minlength">
                Por lo menos {{ nombre.errors?.minlength.requiredLength }} caracteres.
-            </small>
+            </span>
          </div>
       </div>
    </div>
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Apellido</label>
       <div class="col-sm-10">
-         <input type="text"
+         <input [ngClass]="{ 'is-invalid': (apellido.errors?.required || apellido.errors?.minlength) && apellido.touched }"
+               type="text"
                class="form-control form-control-sm"
                placeholder="Apellido"
                name="apellido"
@@ -32,18 +35,19 @@
                minlength="2"
                required
                #apellido="ngModel">
-         <div class="pl-1">
-            <small class="text-secondary" *ngIf="apellido.errors?.required">Este campo es requerido.</small>
-            <small class="text-danger"  *ngIf="apellido.errors?.minlength">
-               Por lo menos {{ apellido.errors?.minlength.requiredLength }} caracteres.
-            </small>
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="nombre.errors?.required">Este campo es requerido.</span>
+            <span *ngIf="nombre.errors?.minlength">
+               Por lo menos {{ nombre.errors?.minlength.requiredLength }} caracteres.
+            </span>
          </div>
       </div>
    </div>
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Correo</label>
       <div class="col-sm-10">
-         <input type="email"
+         <input [ngClass]="{ 'is-invalid': (email.errors?.required || email.errors?.pattern) && email.touched }"
+               type="email"
                class="form-control form-control-sm"
                placeholder="Correo electronico"
                name="email"
@@ -52,15 +56,21 @@
                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                #email="ngModel">
 
-         <div class="pl-1">
-            <small class="text-secondary" *ngIf="email.errors?.required">Este campo es requerido.</small>
-            <small class="text-danger"  *ngIf="email.errors?.pattern">
+         <div class="pl-1 invalid-feedback">
+            <small *ngIf="email.errors?.required">Este campo es requerido.</small>
+            <small *ngIf="email.errors?.pattern">
                Formato de correo invalido. (nombre@correo.com)
             </small>
          </div>
-
-         <br>
-         <button type="submit"  class="btn btn-outline-primary">Guardar</button>
+      </div>
+   </div>
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm"></label>
+      <div class="col-sm-10">
+         <button [disabled]="!forma.valid"
+            type="submit" class="btn btn-outline-primary">
+            Guardar
+         </button>
       </div>
    </div>
 
