--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -64,6 +64,25 @@
          </div>
       </div>
    </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Pais</label>
+      <div class="col-sm-10">
+         <select [(ngModel)]="usuario.pais" class="form-control" name="pais">
+            <option value="" disabled>Seleccione un pais</option>
+            <option *ngFor="let pais of paises"
+                [value]="pais.codigo">{{pais.nombre}}</option>
+         </select>
+      </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Pais</label>
+      <div class="col-sm-10">
+         
+      </div>
+   </div>
+
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm"></label>
       <div class="col-sm-10">
