--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -36,8 +36,8 @@
                required
                #apellido="ngModel">
          <div class="pl-1 invalid-feedback">
-            <span *ngIf="nombre.errors?.required">Este campo es requerido.</span>
-            <span *ngIf="nombre.errors?.minlength">
+            <span *ngIf="apellido.errors?.required">Este campo es requerido.</span>
+            <span *ngIf="apellido.errors?.minlength">
                Por lo menos {{ nombre.errors?.minlength.requiredLength }} caracteres.
             </span>
          </div>
@@ -77,9 +77,26 @@
    </div>
 
    <div class="form-group row">
-      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Pais</label>
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Sexo</label>
       <div class="col-sm-10">
-         
+         <div class="custom-control custom-radio custom-control-inline">
+           <input [(ngModel)]="usuario.sexo"
+                 type="radio"
+                 id="sexo1"
+                 name="sexo"
+                 value="Masculino"
+                 class="custom-control-input">
+           <label class="custom-control-label" for="sexo1">Masculino</label>
+         </div>
+         <div class="custom-control custom-radio custom-control-inline">
+           <input [(ngModel)]="usuario.sexo"
+                 type="radio"
+                 id="sexo2"
+                 name="sexo"
+                  value="Femenino"
+                 class="custom-control-input">
+           <label class="custom-control-label" for="sexo2">Femenino</label>
+         </div>
       </div>
    </div>
 
@@ -94,3 +111,7 @@
    </div>
 
 </form>
+
+<pre>
+   {{ usuario | json }}
+</pre>
