--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -79,23 +79,30 @@
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Sexo</label>
       <div class="col-sm-10">
-         <div class="custom-control custom-radio custom-control-inline">
+         <div *ngFor="let s of sexos"
+            class="custom-control custom-radio custom-control-inline">
            <input [(ngModel)]="usuario.sexo"
                  type="radio"
-                 id="sexo1"
+                 [id]="s"
                  name="sexo"
-                 value="Masculino"
+                 [value]="s"
                  class="custom-control-input">
-           <label class="custom-control-label" for="sexo1">Masculino</label>
+           <label class="custom-control-label" for="{{ s }}">{{ s }}</label>
          </div>
-         <div class="custom-control custom-radio custom-control-inline">
-           <input [(ngModel)]="usuario.sexo"
-                 type="radio"
-                 id="sexo2"
-                 name="sexo"
-                  value="Femenino"
-                 class="custom-control-input">
-           <label class="custom-control-label" for="sexo2">Femenino</label>
+      </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Acepto</label>
+      <div class="col-sm-10">
+         <div class="custom-control custom-checkbox">
+           <input [(ngModel)]="usuario.acepto"
+                  type="checkbox"
+                  class="custom-control-input"
+                  id="acepto"
+                  name="acepto"
+                  required>
+           <label class="custom-control-label" for="acepto">Acepto los Terminos y Condiciones</label>
          </div>
       </div>
    </div>
