--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 
 <div class="container py-3">
-   <app-template></app-template>
+
+   <!-- <app-template></app-template> -->
+
+   <app-data></app-data>
+
 </div>
