--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -1,1 +1,35 @@
-<p>data works!</p>
+<h4>Formularios <small>Data</small></h4>
+<hr>
+<form>
+   
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control form-control-sm" placeholder="Nombre">
+      </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Apellido</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control form-control-sm" placeholder="Apellido">
+      </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Correo</label>
+      <div class="col-sm-10">
+         <input type="email" class="form-control form-control-sm" placeholder="Correo electronico">
+      </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm"></label>
+      <div class="col-sm-10">
+         <button type="submit" class="btn btn-outline-primary">
+            Guardar
+         </button>
+      </div>
+   </div>
+
+</form>
