--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -1,25 +1,59 @@
 <h4>Formularios <small>Data</small></h4>
 <hr>
-<form>
-   
+<form [formGroup]="forma" (ngSubmit)="guardarCambios()" novalidate="novalidate">
+
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Nombre</label>
       <div class="col-sm-10">
-         <input type="text" class="form-control form-control-sm" placeholder="Nombre">
+         <input [ngClass]="{ 'is-invalid': !forma.get('nombre').valid  && forma.get('nombre').touched }"
+               type="text"
+               class="form-control form-control-sm"
+               placeholder="Nombre"
+               formControlName="nombre">
+
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="forma.controls['nombre'].errors?.required">Este campo es requerido.</span>
+            <span *ngIf="forma.controls['nombre'].errors?.minlength">
+               Por lo menos {{ forma.controls['nombre'].errors?.minlength.requiredLength }} caracteres.
+            </span>
+         </div>
       </div>
    </div>
 
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Apellido</label>
       <div class="col-sm-10">
-         <input type="text" class="form-control form-control-sm" placeholder="Apellido">
+         <input [ngClass]="{ 'is-invalid': !forma.get('apellido').valid  && forma.get('apellido').touched }"
+               type="text"
+               class="form-control form-control-sm"
+               placeholder="Apellido"
+               formControlName="apellido">
+
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="forma.controls['apellido'].errors?.required">Este campo es requerido.</span>
+            <span *ngIf="forma.controls['apellido'].errors?.minlength">
+               Por lo menos {{ forma.controls['apellido'].errors?.minlength.requiredLength }} caracteres.
+            </span>
+         </div>
       </div>
    </div>
 
    <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Correo</label>
       <div class="col-sm-10">
-         <input type="email" class="form-control form-control-sm" placeholder="Correo electronico">
+         <input [ngClass]="{ 'is-invalid': !forma.get('email').valid  && forma.get('email').touched }"
+               type="email"
+               class="form-control form-control-sm"
+               placeholder="Correo electronico"
+               formControlName="email">
+
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="forma.controls['email'].errors?.required">Este campo es requerido.</span>
+            <span *ngIf="forma.controls['email'].errors?.pattern">
+               Formato de correo invalido. (nombre@correo.com)
+            </span>
+         </div>
+
       </div>
    </div>
 
@@ -31,5 +65,7 @@
          </button>
       </div>
    </div>
+
+   <h3>{{forma.valid}}</h3>
 
 </form>
