--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -38,6 +38,7 @@
             </div>
          </div>
       </div>
+
    </div>
 
    <div class="form-group row">
@@ -57,6 +58,22 @@
          </div>
 
       </div>
+   </div>
+
+   <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Pasatiempos</label>
+      <div class="col-sm-10" formArrayName="pasatiempos">
+         <input *ngFor="let pasatiempo of forma.controls['pasatiempos'].controls; let i = index"
+               [formControlName]="i"
+               type="text"
+               class="form-control"
+               name="">
+
+      </div>
+      <button (click)="agregarPasatiempo()"
+         class="btn btn-primary btn-sm mt-2">
+         Nuevo +
+      </button>
    </div>
 
    <div class="form-group row">
