--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -61,6 +61,23 @@
    </div>
 
    <div class="form-group row">
+      <label for="" class="col-sm-2 col-form-label col-form-label-sm">Username</label>
+      <div class="col-sm-10">
+         <input [ngClass]="{ 'is-invalid': !forma.get('username').valid  && forma.get('username').touched }"
+               type="text"
+               class="form-control form-control-sm"
+               placeholder="username"
+               formControlName="username">
+
+         <div class="pl-1 invalid-feedback">
+            <span *ngIf="forma.controls['username'].errors?.required">Este campo es requerido.</span>
+            <span *ngIf="forma.get('username').errors?.existe">El username ya esta en uso.</span>
+         </div>
+
+      </div>
+   </div>
+
+   <div class="form-group row">
       <label for="" class="col-sm-2 col-form-label col-form-label-sm">Password</label>
       <div class="col-sm-10">
          <input [ngClass]="{ 'is-invalid': !forma.get('password1').valid  && forma.get('password1').touched }"
@@ -117,6 +134,8 @@
    </div>
 
    <h3>{{forma.valid}}</h3>
+   <br>
+   <h4>{{forma.status}}</h4>
 
 </form>
 
